classDiagram
    Empleado o-- Usuario
    Empresa o-- Rol
    Empresa o-- Empleado
    Empresa o-- Usuario

    Rol o-- Usuario
    Usuario o-- Rol

    BaseEntidad <|-- Rol
    BaseEntidad <|-- Usuario

    class BaseEntidad
    <<abstract>> BaseEntidad
    BaseEntidad: #Id
    BaseEntidad: #Nombre
    BaseEntidad: #Habilitado

    class Usuario
    Usuario: +Contraseña
    Usuario: +Roles

    class Empleado
    Empleado: +Id
    Empleado: +Nombre
    Empleado: +Apellido
    Empleado: +Email
    Empleado: +Habilitado
    Empleado: +Usuario

    class Rol
    Rol: +Usuarios

    class Empresa
    Empresa: +Empleados
    Empresa: +Roles
    Empresa: +Usuarios
